--- a/package.json
+++ b/package.json
@@ -10,29 +10,32 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@vueuse/core": "^7.7.1",
+    "@vueuse/core": "^8.0.0",
     "canvas-confetti": "^1.5.1",
+    "seedrandom": "^3.0.5",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.6",
+    "@antfu/eslint-config": "^0.18.8",
     "@iconify-json/carbon": "^1.1.1",
+    "@iconify-json/mdi": "^1.1.1",
+    "@types/canvas-confetti": "^1.4.2",
     "@types/node": "^17.0.21",
-    "@unocss/reset": "^0.27.6",
+    "@types/seedrandom": "^3.0.2",
+    "@unocss/reset": "^0.28.0",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vue/test-utils": "^2.0.0-rc.18",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "jsdom": "^19.0.0",
     "pnpm": "^6.32.3",
     "typescript": "^4.6.2",
-    "unocss": "^0.27.6",
-    "unplugin-auto-import": "^0.6.1",
-    "unplugin-vue-components": "^0.17.21",
+    "unocss": "^0.28.0",
+    "unplugin-auto-import": "^0.6.4",
+    "unplugin-vue-components": "^0.18.0",
     "vite": "^2.8.6",
     "vite-plugin-pages": "^0.21.4",
-    "vitest": "^0.6.0",
-    "vue-tsc": "^0.32.1"
+    "vitest": "^0.6.0"
   },
   "eslintConfig": {
     "extends": "@antfu"
