--- a/package.json
+++ b/package.json
@@ -11,32 +11,33 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@vueuse/core": "10.7.0",
+    "@vueuse/core": "10.7.1",
     "canvas-confetti": "1.9.2",
     "seedrandom": "3.0.5",
-    "vue": "3.3.13",
+    "vue": "3.4.7",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "2.4.6",
+    "@antfu/eslint-config": "2.6.2",
     "@iconify-json/carbon": "1.1.27",
-    "@iconify-json/mdi": "1.1.63",
+    "@iconify-json/mdi": "1.1.64",
     "@types/canvas-confetti": "1.6.4",
-    "@types/node": "20.10.5",
+    "@types/node": "20.10.8",
     "@types/seedrandom": "3.0.8",
-    "@unocss/reset": "0.58.0",
-    "@vitejs/plugin-vue": "4.5.2",
+    "@unocss/reset": "0.58.3",
+    "@vitejs/plugin-vue": "5.0.3",
     "@vue/test-utils": "2.4.3",
     "eslint": "8.56.0",
-    "jsdom": "23.0.1",
-    "pnpm": "8.12.1",
+    "jsdom": "23.2.0",
+    "pnpm": "8.14.0",
     "typescript": "5.3.3",
-    "unocss": "0.58.0",
-    "unplugin-auto-import": "0.17.2",
+    "unocss": "0.58.3",
+    "unplugin-auto-import": "0.17.3",
     "unplugin-vue-components": "0.26.0",
-    "vite": "5.0.10",
+    "unplugin-vue-macros": "^2.7.9",
+    "vite": "5.0.11",
     "vite-plugin-pages": "0.32.0",
-    "vitest": "1.1.0"
+    "vitest": "1.1.3"
   },
   "eslintConfig": {
     "extends": "@antfu"
